@@ -40,7 +40,7 @@ package ifneeded vfs::template::fish 1.5.2 \
     [list source [file join $dir template fishvfs.tcl]]
 package ifneeded vfs::template::quota 1.5.2 \
     [list source [file join $dir template quotavfs.tcl]]
-package ifneeded vfs::template 1.5.4 \
+package ifneeded vfs::template 1.5.5 \
     [list source [file join $dir template templatevfs.tcl]]
 #
 # Helpers
